Fixed em spacing

--- a/src/components/section/viz/LineChart.scss
+++ b/src/components/section/viz/LineChart.scss
@@ -117,7 +117,7 @@
   }
   .hover-data-text {
     fill: var(--dark);
-    transform: translateX(8.4em);
+    transform: translateX(8.6em);
   }
   .hover-data-text.out {
     fill: var(--light);
@@ -131,7 +131,7 @@
   }
   .hover-reg-text {
     fill: var(--theme);
-    transform: translate(7.3em, 1.8em);
+    transform: translate(7.5em, 1.8em);
   }
 
   .hover-diff-line {
@@ -142,7 +142,7 @@
   }
   .hover-diff-text {
     fill: var(--error);
-    transform: translate(9.1em, 3.6em);
+    transform: translate(9.3em, 3.6em);
   }
 
   // MSE
@@ -157,6 +157,6 @@
   }
   .mse-text {
     fill: var(--error);
-    transform: translateX(2.8em);
+    transform: translateX(3em);
   }
 }
